--- a/style.css
+++ b/style.css
@@ -23,17 +23,23 @@ a {
   display: grid;
   margin: 0 20px;
   font-family: "Open Sans", sans-serif;
+  min-width: 320px;
 }
 
 @media (min-width: 1200px) {
   .page-body {
-    grid-template-columns: 1fr 2fr;
     max-width: 1200px;
     margin: auto;
   }
 }
 
+.header {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .logo {
+  width: 100%;
   text-align: center;
   text-transform: uppercase;
   padding: 10px 0 19px 0;
@@ -55,4 +61,40 @@ a {
   padding: 0;
   border-bottom: 4px solid #fff;
   border-top: 2px solid #fff;
+}
+
+.header-menu,
+.side-menu {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: auto;
+  padding: auto;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.side-menu {
+  order: 2;
+}
+
+.blockf {
+  order: 3;
+}
+
+.header-menu__item,
+.side-menu__item {
+  width: 100%;
+  background: #3d4a6e;
+  font-size: 16px;
+  padding: 15px;
+  text-align: center;
+}
+
+.header-menu__item a,
+.side-menu__item a {
+  color: #f4f4f4;
 }
